# cherino-bot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  upload.sh
cherino/: __main__.py  config.py  log.py  main.py  pyrogram.py  recent_message.py  scheduler.py
cherino/crud/: __init__.py  auth.py  jobstore.py  setting.py  state.py  user.py
cherino/database/: __init__.py  db.py
cherino/database/migration/: v1.py
cherino/database/migrations/: 001_create_question_group.py  002_add_pendingverify_triggered.py  003_json_settings.py  004_add_group_for_answer_history.py  005_clear_user_last_seen.py
cherino/database/models/: __init__.py  history.py  jobstore.py  lastseen.py  pendingverify.py  question.py  record.py  setting.py  state.py  user.py
cherino/dispatcher/: __init__.py  add_question.py  admin.py  auth.py  clean.py  normal.py  question.py  settings.py  spam.py  user.py
cherino/dispatcher/settings/: __init__.py  dialog.py  getter.py  handler.py  question.py  settings.py  state.py
cherino/filters/: __init__.py  chat.py  is_admin.py  member_join.py  message.py
cherino/utils/: __init__.py  message.py  nsfw.py  pager.py  user.py
tests/: __init__.py  test_auth.py
