[project]
name = "cherino"
version = "0.2.1"
description = "Telegram 群组管理 bot"
authors = [
    {name = "Aloxaf", email = "Aloxafx@gmail.com"},
]
dependencies = [
    "aiogram==3.0.0b7",
    "pydantic>=1.10.5",
    "tomlkit>=0.11.6",
    "peewee>=3.15.4",
    "apscheduler>=3.10.0",
    "cachetools>=5.3.0",
    "asyncache>=0.3.1",
    "loguru>=0.6.0",
    "peewee-migrate>=1.10.1",
    "pytimeparse>=1.1.8",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
cherino = "cherino.__main__:main"

[tool.pdm]

[tool.pdm.scripts]
start.cmd = "pdm run python -m cherino"
pwm_create.cmd = "pdm run pw_migrate create --database 'sqlite://./db.sqlite' --directory cherino/database/migrations"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.2",
]
